content of second section

--- a/index.html
+++ b/index.html
@@ -11,8 +11,29 @@
       <section class="first_section">
         <p>Komerční prostor č. <strong>998</strong></p>
         <p>Praha 3 - Žižkov <br />Rezidence Parková čtvrť</p>
-        <p>Patro <br /><strong>2.NP</strong></p>
+        <p>
+          Patro
+          <br />
+          <strong>2.NP</strong>
+        </p>
         <button class="to_rent">Pronájem</button>
+      </section>
+      <section class="second_section">
+        <p>Základní informace o jednotce</p>
+        <ul class="list_info">
+          <li>Plocha: <strong>324,9 m²</strong></li>
+          <li>Předzahrádky/Terasy: <strong>70,9 m²</strong></li>
+          <li>Preferovaný provoz: <strong>restaurace</strong></li>
+          <li>Termín dokončení: <strong>červenec 2024</strong></li>
+          <li>
+            Příslušenství:
+            <br />
+            <strong>prostor pro lapol, sklepy, parkovací stání</strong>
+          </li>
+        </ul>
+        <br />
+        <p>Cena za pronájem: <strong>XX.XXX Kč/m²/měsíc</strong></p>
+        <img src="./image_building.png" alt="image_building" />
       </section>
     </main>
   </body>
