content of fourth section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <main>
-      <section class="first_section">
+      <section class="first_section_info">
         <p>Komerční prostor č. <strong>998</strong></p>
         <p>Praha 3 - Žižkov <br />Rezidence Parková čtvrť</p>
         <p>
@@ -18,7 +18,7 @@
         </p>
         <button class="to_rent">Pronájem</button>
       </section>
-      <section class="second_section">
+      <section class="second_section_detail">
         <p>Základní informace o jednotce</p>
         <ul class="list_info">
           <li>Plocha: <strong>324,9 m²</strong></li>
@@ -34,6 +34,27 @@
         <br />
         <p>Cena za pronájem: <strong>XX.XXX Kč/m²/měsíc</strong></p>
         <img src="./image_building.png" alt="image_building" />
+      </section>
+      <section class="third_section_contact">
+        <p>Pro informace kontaktujte</p>
+        <p>Jan Štembera</p>
+        <div class="mobile">
+          <img src="" alt="mobile_icon" />
+          <p>+420 771 296 360</p>
+        </div>
+        <div class="phone">
+          <img src="" alt="phone_icon" />
+          <p>+420 226 221 190</p>
+        </div>
+        <div class="email">
+          <img src="" alt="email_icon" />
+          <p>komerce@central-group.cz</p>
+        </div>
+        <img src="" alt="qr_code" />
+      </section>
+      <section class="fourth_section_plan">
+        <img src="" alt="plan_" />
+        <button class="btn_card">Karta komerčního prostoru</button>
       </section>
     </main>
   </body>
