css file, fonts

--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Exo+2:wght@100;200;300;500;600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
@@ -39,15 +50,46 @@
         <p>Pro informace kontaktujte</p>
         <p>Jan Štembera</p>
         <div class="mobile">
-          <img src="" alt="mobile_icon" />
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="rgba(138, 138, 138, 1)"
+          >
+            <path
+              d="M16.75 2h-10c-1.103 0-2 .897-2 2v16c0 1.103.897 2 2 2h10c1.103 0 2-.897 2-2V4c0-1.103-.897-2-2-2zm-10 18V4h10l.002 16H6.75z"
+            ></path>
+            <circle cx="11.75" cy="18" r="1"></circle>
+          </svg>
           <p>+420 771 296 360</p>
         </div>
         <div class="phone">
-          <img src="" alt="phone_icon" />
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="rgba(138, 138, 138, 1)"
+          >
+            <path
+              d="M17.707 12.293a.999.999 0 0 0-1.414 0l-1.594 1.594c-.739-.22-2.118-.72-2.992-1.594s-1.374-2.253-1.594-2.992l1.594-1.594a.999.999 0 0 0 0-1.414l-4-4a.999.999 0 0 0-1.414 0L3.581 5.005c-.38.38-.594.902-.586 1.435.023 1.424.4 6.37 4.298 10.268s8.844 4.274 10.269 4.298h.028c.528 0 1.027-.208 1.405-.586l2.712-2.712a.999.999 0 0 0 0-1.414l-4-4.001zm-.127 6.712c-1.248-.021-5.518-.356-8.873-3.712-3.366-3.366-3.692-7.651-3.712-8.874L7 4.414 9.586 7 8.293 8.293a1 1 0 0 0-.272.912c.024.115.611 2.842 2.271 4.502s4.387 2.247 4.502 2.271a.991.991 0 0 0 .912-.271L17 14.414 19.586 17l-2.006 2.005z"
+            ></path>
+          </svg>
           <p>+420 226 221 190</p>
         </div>
         <div class="email">
-          <img src="" alt="email_icon" />
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="rgba(138, 138, 138, 1)"
+          >
+            <path
+              d="M20 4H4c-1.103 0-2 .897-2 2v12c0 1.103.897 2 2 2h16c1.103 0 2-.897 2-2V6c0-1.103-.897-2-2-2zm0 2v.511l-8 6.223-8-6.222V6h16zM4 18V9.044l7.386 5.745a.994.994 0 0 0 1.228 0L20 9.044 20.002 18H4z"
+            ></path>
+          </svg>
           <p>komerce@central-group.cz</p>
         </div>
         <img src="" alt="qr_code" />
@@ -55,6 +97,30 @@
       <section class="fourth_section_plan">
         <img src="" alt="plan_" />
         <button class="btn_card">Karta komerčního prostoru</button>
+      </section>
+      <section class="fifth_section_gallery">
+        <p>Galerie</p>
+      </section>
+      <section class="sixth_section_form">
+        <h2>Přihlaste se odběru našich novinek</h2>
+        <p>
+          Budeme Vás informovat o novinkách v nabídce našich komerčních prostor
+        </p>
+        <img src="" alt="arrow_icon" />
+        <form>
+          <input type="text" value="Jméno*" />
+          <input type="text" value="Přijmení*" />
+          <input type="text" value="E-mail*" />
+          <input type="text" value="Telefon" />
+          <input type="checkbox" id="information" /><label for="information"
+            >Přeji si být infromován i o připravovaných komerčních prostorech,
+            které nejsou ještě v nabídce a ve výstavbě.</label
+          >
+          <input type="checkbox" id="agreement" /><label for="agreement"
+            >Souhlasím se zpracováním <u>osobních údajů</u>.</label
+          >
+          <button id="send">Odeslat</button>
+        </form>
       </section>
     </main>
   </body>
