first section - font, color, position

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <body>
     <main>
       <section class="first_section_info">
-        <p>Komerční prostor č. <strong>998</strong></p>
-        <p>Praha 3 - Žižkov <br />Rezidence Parková čtvrť</p>
+        <h1>Komerční prostor č. <strong>998</strong></h1>
+        <p>Praha 3 - Žižkov <br /><strong>Rezidence Parková čtvrť</strong></p>
         <p>
           Patro
           <br />
