second section - positon

--- a/index.html
+++ b/index.html
@@ -30,20 +30,24 @@
         <button class="to_rent">Pronájem</button>
       </section>
       <section class="second_section_detail">
-        <p>Základní informace o jednotce</p>
-        <ul class="list_info">
-          <li>Plocha: <strong>324,9 m²</strong></li>
-          <li>Předzahrádky/Terasy: <strong>70,9 m²</strong></li>
-          <li>Preferovaný provoz: <strong>restaurace</strong></li>
-          <li>Termín dokončení: <strong>červenec 2024</strong></li>
-          <li>
-            Příslušenství:
+        <div class="left_side">
+          Základní informace o jednotce
+          <ul class="list_points">
+            <li>Plocha: <strong>324,9 m²</strong></li>
+            <li>Předzahrádky/Terasy: <strong>70,9 m²</strong></li>
+            <li>Preferovaný provoz: <strong>restaurace</strong></li>
+            <li>Termín dokončení: <strong>červenec 2024</strong></li>
+            <li>
+              Příslušenství:
+              <br />
+              <strong>prostor pro lapol, sklepy, parkovací stání</strong>
+            </li>
+
             <br />
-            <strong>prostor pro lapol, sklepy, parkovací stání</strong>
-          </li>
-        </ul>
-        <br />
-        <p>Cena za pronájem: <strong>XX.XXX Kč/m²/měsíc</strong></p>
+          </ul>
+
+          <p>Cena za pronájem: <strong>XX.XXX Kč/m²/měsíc</strong></p>
+        </div>
         <img src="./image_building.png" alt="image_building" />
       </section>
       <section class="third_section_contact">
