fourth section - added image, margin, size

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <img src="" alt="qr_code" />
       </section>
       <section class="fourth_section_plan">
-        <img src="" alt="plan_" />
+        <img src="./img/image_plan.png" alt="building_plan" />
         <button class="btn_card">Karta komerčního prostoru</button>
       </section>
       <section class="fifth_section_gallery">
